tests/rename/should_compile/rn009.hs
module Imp10 where
import {-# SOURCE #-} Imp10Aux
