tests/rename/should_fail/RnFail055_aux.hs
module RnFail055_aux where

import {-# SOURCE #-} RnFail055
